Fix regression in inactive tab drawing (Mac).

In non-Material Design mode, inactive tabs are not being drawn as they
were pre-MD.

BUG=597029

Review URL: https://codereview.chromium.org/1829443002

Cr-Commit-Position: refs/heads/master@{#382853}

Former-commit-id: fc4bfea0145fbb9f85bcaba096715a4c70f93014